--- a/frp/client/config.ini
+++ b/frp/client/config.ini
@@ -1,7 +1,7 @@
 [common]
-server_addr = 45.78.49.14
+server_addr = xx.xx.xx.xx
 server_port = 7000
-token = xiaoxipangren
+token = token
 user = xiaobinhung
 admin_addr = 127.0.0.1
 admin_prot = 7400
