--- a/ubuntu/frp/client/config.ini
+++ b/ubuntu/frp/client/config.ini
@@ -2,7 +2,7 @@
 server_addr = xx.xx.xx.xx
 server_port = 7000
 token = token
-user = xiaobinhung
+user = token
 admin_addr = 127.0.0.1
 admin_prot = 7400
 admin_user = admin
